welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: not found: value caseORange
    caseOrange=caseORange+1
               ^